--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,13 +10,57 @@
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/home">
-            <i class="bi icon-lg bi-house-door-fill"></i>
+          <a class="nav-link text-light btn-nav" routerLink="/rankings">
+            <i class="bi icon-lg bi-clipboard-data-fill" ngxTippy
+            [ngxTippy]="'Rankings'"
+            [tippyProps]="{
+              arrow: false,
+              placement: 'top'
+            }"></i>
+            
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/login">
-            <i class="bi icon-lg bi-person-circle"></i>
+          <a class="nav-link text-light btn-nav" routerLink="/history">
+            <i class="bi icon-lg bi-clock-history" 
+             [ngxTippy]="'Historial'"
+             [tippyProps]="{
+              arrow: false,
+              placement: 'top'
+            }"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light btn-nav" routerLink="/home">
+            <i class="bi icon-lg bi-house-door-fill"
+            [ngxTippy]="'Home'"
+            [tippyProps]="{
+              arrow: false,
+              placement: 'top'
+            }"
+            ></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light btn-nav" routerLink="/profile">
+            <i class="bi icon-lg bi-person-circle"
+            [ngxTippy]="'Perfil'"
+            [tippyProps]="{
+            arrow: false,
+            placement: 'top'
+            }"
+            ></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light btn-nav" (click)="logout()" routerLink="/login"  >
+            <i class="icon-lg bi gg-log-off "
+            [ngxTippy]="'Salir'"
+            [tippyProps]="{
+            arrow: false,
+            placement: 'top'
+            }"
+            ></i>
           </a>
         </li>
       </ul>
@@ -88,8 +132,6 @@
             ></i>
           </a>
         </li>
-        
-
       </ul>
     </div>
   </div>
