--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,134 +1,77 @@
 <nav
-  *ngIf="!toggleBlur"
-  @slideDownHideUp
-  class="navbar navbar-expand bg-blur position-fixed w-100 top-0 navbar-home"
->
-  <div class="container-fluid">
-    <a class="navbar-brand text-light" routerLink="/home"
-      ><logo [animated]="false" [width]="20"></logo>
-    </a>
-    <div class="d-flex justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/rankings">
-            <i class="bi icon-lg bi-clipboard-data-fill" ngxTippy
-            [ngxTippy]="'Rankings'"
-            [tippyProps]="{
-              arrow: false,
-              placement: 'top'
-            }"></i>
-            
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/history">
-            <i class="bi icon-lg bi-clock-history" 
-             [ngxTippy]="'Historial'"
-             [tippyProps]="{
-              arrow: false,
-              placement: 'top'
-            }"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/home">
-            <i class="bi icon-lg bi-house-door-fill"
-            [ngxTippy]="'Home'"
-            [tippyProps]="{
-              arrow: false,
-              placement: 'top'
-            }"
-            ></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light btn-nav" routerLink="/profile">
-            <i class="bi icon-lg bi-person-circle"
-            [ngxTippy]="'Perfil'"
-            [tippyProps]="{
-            arrow: false,
-            placement: 'top'
-            }"
-            ></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light btn-nav" (click)="logout()" routerLink="/login"  >
-            <i class="icon-lg bi gg-log-off "
-            [ngxTippy]="'Salir'"
-            [tippyProps]="{
-            arrow: false,
-            placement: 'top'
-            }"
-            ></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<nav
   *ngIf="toggleBlur"
   @slideDownHideUp
-  class="navbar navbar-expand navbar-dark bg-color position-fixed w-100 top-0 navbar-home"
+  [class.position-fixed]="fixed"
+  class="navbar navbar-expand navbar-dark bg-color w-100 top-0 navbar-home"
 >
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home"
-      ><logo [animated]="false" [width]="20"></logo></a>
+      ><logo [animated]="false" [width]="20"></logo
+    ></a>
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-light btn-nav" routerLink="/rankings">
-            <i class="bi icon-lg bi-clipboard-data-fill" ngxTippy
-            [ngxTippy]="'Rankings'"
-            [tippyProps]="{
-              arrow: false,
-              placement: 'top'
-            }"></i>
-            
+            <i
+              class="bi icon-lg bi-clipboard-data-fill"
+              ngxTippy
+              [ngxTippy]="'Rankings'"
+              [tippyProps]="{
+                arrow: false,
+                placement: 'top'
+              }"
+            ></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light btn-nav" routerLink="/history">
-            <i class="bi icon-lg bi-clock-history" 
-             [ngxTippy]="'Historial'"
-             [tippyProps]="{
-              arrow: false,
-              placement: 'top'
-            }"></i>
+            <i
+              class="bi icon-lg bi-clock-history"
+              [ngxTippy]="'Historial'"
+              [tippyProps]="{
+                arrow: false,
+                placement: 'top'
+              }"
+            ></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light btn-nav" routerLink="/home">
-            <i class="bi icon-lg bi-house-door-fill"
-            [ngxTippy]="'Home'"
-            [tippyProps]="{
-              arrow: false,
-              placement: 'top'
-            }"
+            <i
+              class="bi icon-lg bi-house-door-fill"
+              [ngxTippy]="'Home'"
+              [tippyProps]="{
+                arrow: false,
+                placement: 'top'
+              }"
             ></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light btn-nav" routerLink="/profile">
-            <i class="bi icon-lg bi-person-circle"
-            [ngxTippy]="'Perfil'"
-            [tippyProps]="{
-            arrow: false,
-            placement: 'top'
-            }"
+            <i
+              class="bi icon-lg bi-person-circle"
+              [ngxTippy]="'Perfil'"
+              [tippyProps]="{
+                arrow: false,
+                placement: 'top'
+              }"
             ></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light btn-nav" (click)="logout()" routerLink="/login"  >
-            <i class="icon-lg bi gg-log-off "
-            [ngxTippy]="'Salir'"
-            [tippyProps]="{
-            arrow: false,
-            placement: 'top'
-            }"
+          <a
+            class="nav-link text-light btn-nav"
+            (click)="logout()"
+            routerLink="/login"
+          >
+            <i
+              class="icon-lg bi gg-log-off"
+              [ngxTippy]="'Salir'"
+              [tippyProps]="{
+                arrow: false,
+                placement: 'top'
+              }"
             ></i>
           </a>
         </li>
