Añadiendo si es fixed el topnav

--- a/src/app/historial/historial.component.html
+++ b/src/app/historial/historial.component.html
@@ -1,4 +1,4 @@
-<topnav></topnav>
+<topnav [fixed]="true"></topnav>
 
 <div class="row tableContainer">
   <div class="col-12 d-flex justify-content-center ">
