--- a/src/app/user-ranking-dev/user-ranking-dev.component.css
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.css
@@ -1,102 +1,3 @@
-
-.component-container{
-  overflow: hidden;
-}
-
-.sideTitle{
-margin-top:3.1rem;
-margin-bottom:1rem;
-margin-left: 0rem;
-color: var(--corp-color-one);
-font: 732 47px/33px Roboto !important;
-
-
-}
-
-.ranking-container{
-  height: 43% !important;
-}
-
-.ranking-img{
-    max-height: 7rem;
-}
-
-.btn{
-background-color: var(--corp-color-one);
-border-color: var(--corp-color-two);
-margin-left:1rem;
-min-width: 11rem;
-}
-
-@media (max-width: 600px) {
-  .btn{
-min-width: 5rem;
-  }
-}
-.sidecont {
-  top: 8rem ;
-  z-index: 1;
-  max-width: 100%;
-  width: 28rem;
-  height: 40rem;
-  overflow:scroll;
-}
-.ranking-card {
-}
-
-.ranking {
-  width: 79rem !important;
-  height: 34rem;
-  margin-right: -3rem;
-  margin-top: 1rem;
-
-  
-}
-
-.ranking-card:hover {
-  transform: scale(1.05);
-}
-.expandbutton {
-  margin-top: 3rem;
-}
-.card-horizontal {
-  display: flex;
-  flex: 1 1 auto;
-}
-
-.add-ranking-container {
-  min-width: 8rem;
-}
-
-.add-ranking-input {
-  border-radius: 0.5rem;
-  width: 5rem !important;
-  height: 2rem;
-  font-size: x-large;
-}
-
-.add-ranking-button {
-  width: 2rem !important;
-  position: absolute;
-  left: 6rem;
-  top: 1rem;
-}
-
-.sidecont {
-  cursor: pointer;
-}
-
-.mat-typography {
-  overflow: visible !important;
-}
-.bootonGestion{
-min-width: 11rem;
-}
-
-#addRegisterInput{
-    width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  font-size: x-large;
+.img-ranking {
+  object-fit: cover;
 }
