--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -9,15 +9,16 @@
       </div>
       <div
         class="list-group list-group-flush scrollarea"
-        style="height: 90vh; overflow-y: scroll"
+        style="height: 88vh; overflow-y: scroll"
       >
         <div
           *ngFor="let item of rankings"
-          class="list-group-item list-group-item-action py-3 lh-tight"
+          class="list-group-item list-group-item-action py-3 lh-tight ranking-card"
+          (click)="rankingData(item.id, item.name,item.docPath)"
         >
           <div
             class="d-flex w-100 align-items-center justify-content-between"
-            (click)="rankingData(item.id, item.name)"
+           
           >
             <div class="flex-shrink-0">
               <img
@@ -44,8 +45,7 @@
       </div>
     </div>
 
-<<<<<<< HEAD
-    <div class="col-xl-9">
+    <div class="col-xl-9 h-75">
       <div class="row gap-1 border-bottom">
         <div class="col-auto ms-1 ps-0">
           <h3 class="btn-sm my-1 text-color">Opciones</h3>
@@ -55,7 +55,6 @@
             class="btn btn-sm btn-color text-light"
             data-bs-toggle="modal"
             data-bs-target="#addRankingModal"
-            *ngIf="!nullRankings"
           >
             Añadir
           </button>
@@ -64,7 +63,6 @@
           <button
             class="btn btn-sm btn-color text-light"
             routerLink="/create"
-            *ngIf="!nullRankings"
           >
             Crear
           </button>
@@ -94,7 +92,7 @@
             class="btn btn-sm btn-color text-light"
             *ngIf="rankingSelect && isModerator"
             data-bs-toggle="modal"
-            data-bs-target="#documnetModal"
+            data-bs-target="#documentModal"
           >
             Documento
           </button>
@@ -129,11 +127,22 @@
             Puntos Insinia: {{ insiniaPoints }}
           </button>
         </div>
+        <div class="col-auto g-0 mt-1">
+          <button
+            class="btn btn-sm btn-color text-light"
+            *ngIf="rankingSelect && !isModerator"
+            data-bs-toggle="modal"
+            data-bs-target="#documentModal"
+          >
+            Documento
+          </button>
+        </div>
       </div>
-      <div style="height: 89vh">
+      <div style="height: 85vh">
         <ag-grid-angular
-          style="height: 96%; width: 50rem;"
-          class="ag-theme-alpine ranking table-responsive"
+        *ngIf="rankingSelect"
+          style="height: 96%; width: 100%;"
+          class="ag-theme-alpine ranking table-responsive mt-3"
           [columnDefs]="columnDefsSelect"
           [rowData]="rowData"
           id="dataTable"
@@ -166,7 +175,7 @@
         <h3 class="modal-title" id="addRankingModalLabel">Añadir codigo</h3>
         <button
           type="button"
-          class="btn-close"
+          class="btn-close btn-sm"
           data-bs-dismiss="modal"
           aria-label="Close"
         ></button>
@@ -177,11 +186,12 @@
           id="addRegisterInput"
           placeholder="Codigo"
           name="addRegisterInput"
+          class="form-control"
           #addRegisterInput
         />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">
           Cerrar
         </button>
         <button
@@ -224,7 +234,7 @@
         <h4>Si renuevas el codigo de accesso el anterior no sera valido</h4>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">
           Cerrar
         </button>
         <button
@@ -235,7 +245,6 @@
         >
           Renovar
         </button>
-<<<<<<< HEAD
       </div>
     </div>
   </div>
@@ -265,7 +274,7 @@
         <h3>Estas seguro que quieres eliminar el Ranking {{ nameSelect }}</h3>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">
           No
         </button>
         <button
@@ -307,7 +316,7 @@
         <br />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">
           Cancelar
         </button>
         <button
@@ -348,7 +357,7 @@
         <h3>Estas seguro que quieres salir del Ranking {{ nameSelect }}</h3>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">
           No
         </button>
         <button
@@ -390,7 +399,7 @@
         <br />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">
           Cancelar
         </button>
         <button
@@ -427,7 +436,7 @@
       <div class="modal-body">
         <h3>Tienes {{ insiniaPoints }} puntos Insinia</h3>
         <h3>
-          Estos puntos sirven para valuar a los compañeros de ranking segun sus
+          Estos puntos sirven para valuar a los compañeros de ranking según sus
           aptitudes
         </h3>
         <br />
@@ -437,7 +446,6 @@
           type="button"
           class="btn btn-sm btn-color text-light"
           data-bs-dismiss="modal"
-          (click)="exitRanking()"
         >
           Cerrar
         </button>
@@ -446,26 +454,62 @@
   </div>
 </div>
 
-<<<<<<< HEAD
+
 <div
   class="modal fade"
-  id="documnetModal"
+  id="documentModal"
   tabindex="-1"
-  aria-labelledby="documnetModal"
+  aria-labelledby="puntosModal"
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="documnetModal">Documento del Ranking</h3>
-        <input
-          type="file"
-          name="file"
-          id="file"
-          [files]="file"
-          onchange="console.log(event.target.files)"
-        />
+        <h3 class="modal-title" id="documentModal">Documento del ranking</h3>
+        <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="modal"
+        aria-label="Close"
+      ></button>
+      </div>
+      <div class="modal-body">
+        <form #f="ngForm" *ngIf="isModerator" >
+          <input class = "btn btn-default btn-choose" type="file"  #files enctype="multipart/form-data">
+          <button  type="submit" name="submit" value="Upload" class="btn btn-sm btn-color text-light mt-5" (click)="sendFile()"    data-bs-target="#puntosModal2">Subir</button>
+        </form>
+        
+     
+      </div>
+      <div class="modal-body">
+      <a class="link" *ngIf="!linkNull" href="{{docPath}}">Descargar el documento del ranking</a>
+      <h3 *ngIf="linkNull">De momento no hay ningun documento</h3>
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-sm btn-color text-light"
+          data-bs-dismiss="modal"
+        >
+          Cerrar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 
+
+<div
+  class="modal fade"
+  id="puntosModal2"
+  tabindex="-1"
+  aria-labelledby="puntosModal2"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="puntosModal2">Subido con exito</h3>
         <button
           type="button"
           class="btn-close"
@@ -474,23 +518,7 @@
         ></button>
       </div>
       <div class="modal-body">
-        <label class="text-color text-truncate mt-2"
-          >Imagen
-          <label class="form-control-img text-color text-center"
-            >Documento</label
-          >
-          <small @fadeIn class="text-color"
-            >Puedes seleccionar otra foto si quieres.</small
-          >
-          <input
-            #rankingPicture
-            name="rankingPicture"
-            id="rankingPicture"
-            type="file"
-            accept="image/png, image/jpg, image/jpeg, image/svg"
-            class="hide"
-          />
-        </label>
+        <h3>Puedes cerrar la ventana</h3>
         <br />
       </div>
       <div class="modal-footer">
@@ -498,8 +526,6 @@
           type="button"
           class="btn btn-sm btn-color text-light"
           data-bs-dismiss="modal"
-          download="file"
-          href="..\..\files\ciudades.txt"
         >
           Cerrar
         </button>
