Añadiendo topnav fixed a creador de rankings

--- a/src/app/add-ranking/add-ranking.component.html
+++ b/src/app/add-ranking/add-ranking.component.html
@@ -1,3 +1,5 @@
+<topnav [fixed]="true"></topnav>
+
 <div>
   <div class="row justify-content-center g-0">
     <div
@@ -69,11 +71,7 @@
       class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 px-5 hidden-md-down"
     >
       <div
-        class="
-          d-flex
-          justify-content-center
-          align-self-center align-items-center
-        "
+        class="d-flex justify-content-center align-self-center align-items-center"
       >
         <form
           class="w-100 mx-2 d-flex flex-column align-self-center reduce-margin"
