Cambiando a componente modal el #addRankingModal

--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -157,56 +157,39 @@
   </div>
 </div>
 
-<div
-  class="modal fade"
-  id="addRankingModal"
-  tabindex="-1"
-  aria-labelledby="addRankingModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="addRankingModalLabel">Añadir codigo</h3>
-        <button
-          type="button"
-          class="btn-close btn-sm"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <input
-          type="text"
-          id="addRegisterInput"
-          placeholder="Codigo"
-          name="addRegisterInput"
-          class="form-control"
-          #addRegisterInput
-        />
-      </div>
-      <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary btn-sm"
-          data-bs-dismiss="modal"
-        >
-          Cerrar
-        </button>
-        <button
-          type="button"
-          class="btn btn-sm btn-color text-light"
-          (click)="addRankingByCode(addRegisterInput.value)"
-          data-bs-dismiss="modal"
-        >
-          Añadir
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <chips *ngIf="idSelect" [idRanking]="idSelect"></chips>
+
+
+<modal [title]="'Añadir código'" [uniqueId]="'addRankingModal'">
+  <div class="modal-body">
+    <input
+      type="text"
+      id="addRegisterInput"
+      placeholder="Codigo"
+      name="addRegisterInput"
+      class="form-control"
+      #addRegisterInput
+    />
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-secondary btn-sm"
+      data-bs-dismiss="modal"
+    >
+      Cerrar
+    </button>
+    <button
+      type="button"
+      class="btn btn-sm btn-color text-light"
+      (click)="addRankingByCode(addRegisterInput.value)"
+      data-bs-dismiss="modal"
+    >
+      Añadir
+    </button>
+  </div>
+</modal>
+
 
 <div
   class="modal fade"
