--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -216,95 +216,52 @@
   </div>
 </modal>
 
-<div
-  class="modal fade"
-  id="deleteRankingModal"
-  tabindex="-1"
-  aria-labelledby="deleteRankingModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="deleteRankingModalLabel">
-          Eliminar ranking
-        </h3>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <h3>Estas seguro que quieres eliminar el Ranking {{ nameSelect }}</h3>
-      </div>
-      <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary btn-sm"
-          data-bs-dismiss="modal"
-        >
-          No
-        </button>
-        <button
-          type="button"
-          class="btn btn-sm btn-color text-light"
-          data-bs-dismiss="modal"
-          data-bs-target="#deleteRankingModal2"
-          data-bs-toggle="modal"
-        >
-          Si
-        </button>
-      </div>
-    </div>
+<modal [uniqueId]="'deleteRankingModal'" [title]="'Eliminar ranking'">
+  <div class="modal-body">
+    <h3>Estas seguro que quieres eliminar el Ranking {{ nameSelect }}</h3>
   </div>
-</div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-secondary btn-sm"
+      data-bs-dismiss="modal"
+    >
+      No
+    </button>
+    <button
+      type="button"
+      class="btn btn-sm btn-color text-light"
+      data-bs-dismiss="modal"
+      data-bs-target="#deleteRankingModal2"
+      data-bs-toggle="modal"
+    >
+      Si
+    </button>
+  </div>
+</modal>
 
-<div
-  class="modal fade"
-  id="deleteRankingModal2"
-  tabindex="-1"
-  aria-labelledby="deleteRankingModalLabel2"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="deleteRankingModalLabel2">
-          Eliminar ranking
-        </h3>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <h3>Eliminar el ranking {{ nameSelect }} es irreversible</h3>
-        <br />
-      </div>
-      <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary btn-sm"
-          data-bs-dismiss="modal"
-        >
-          Cancelar
-        </button>
-        <button
-          type="button"
-          class="btn btn-sm btn-color text-light"
-          data-bs-dismiss="modal"
-          (click)="deleteRanking()"
-        >
-          Eliminar
-        </button>
-      </div>
-    </div>
+<modal [title]="'Eliminar ranking'" [uniqueId]="'deleteRankingModal2'">
+  <div class="modal-body text-center">
+    <h3>Eliminar el ranking {{ nameSelect }} es irreversible</h3>
   </div>
-</div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-secondary btn-sm"
+      data-bs-dismiss="modal"
+    >
+      Cancelar
+    </button>
+    <button
+      type="button"
+      class="btn btn-sm btn-color text-light"
+      data-bs-dismiss="modal"
+      (click)="deleteRanking()"
+    >
+      Eliminar
+    </button>
+  </div>
+</modal>
 
 <modal [title]="'Salir del ranking'" [uniqueId]="'exitRankingModal'">
   <div class="modal-body">
@@ -333,7 +290,6 @@
 <modal [title]="'Salir del ranking'" [uniqueId]="'exitRankingModal2'">
   <div class="modal-body">
     <h3>Si sales del ranking {{ nameSelect }} perderas todos tus puntos</h3>
-    <br />
   </div>
   <div class="modal-footer">
     <button
@@ -355,13 +311,12 @@
 </modal>
 
 <modal [title]="'Puntos Insinia'" [uniqueId]="'puntosModal'">
-  <div class="modal-body">
+  <div class="modal-body text-center">
     <h3>Tienes {{ insiniaPoints }} puntos Insinia</h3>
     <h3>
       Estos puntos sirven para valuar a los compañeros de ranking según sus
       aptitudes
     </h3>
-    <br />
   </div>
   <div class="modal-footer">
     <button
