Aplicando prettier y formato

--- a/src/app/historial/historial.component.css
+++ b/src/app/historial/historial.component.css
@@ -15,7 +15,7 @@
 }
 .category-sold {
   font-weight: bold;
-  background-color: lightblue !important;
+  background-color: lightblue !important;f
 }
 .category-in-workshop {
   font-weight: bold;
