--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,25 +1,25 @@
 .btn-color:hover {
-	background-color: #5108ee!important;
-	color: #fff!important
+  background-color: #5108ee !important;
+  color: #fff !important;
 }
 
 .map {
-	height: 20vh;
-	width: 60vw
+  height: 20vh;
+  width: 60vw;
 }
 
 .body {
-	width: 100%;
-	height: 150vh;
-	background: linear-gradient(0deg, #8c57fd 0, rgba(0, 0, 0, 0) 90%);
-	position: absolute
+  width: 100%;
+  height: 150vh;
+  background: linear-gradient(0deg, #8c57fd 0, rgba(0, 0, 0, 0) 90%);
+  position: absolute;
 }
 
 a {
-	color: #6d30f3;
-	text-decoration: none
+  color: #6d30f3;
+  text-decoration: none;
 }
 
 .logo:hover {
-	cursor: pointer
+  cursor: pointer;
 }
